add portfolio main page, add skype button

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,31 @@
 ---
-layout: page
+layout: home
 title: "Index"
-description: ""
+description: "adfadfad"
+theme :
+  name : tudou
 ---
 {% include JB/setup %}
+<div>
+	<div class="project-container">
+		<div class="img-holder"><img src="{{ ASSET_PATH }}/img/projects/whaam.png"></div>
+		<div class="project-text">
+			<h3>Project Name</h3>
+			<div>Description dfasdfdsfadfadfasdfadsf adsaasdfasdfadsfasadfadfadfasdfasdfasdfadsadsfads</div>
+		</div>
+	</div>
+	<div class="project-container">
+		<div class="img-holder"><img src="{{ ASSET_PATH }}/img/projects/jameslist-logo.png"></div>
+		<div class="project-text">
+			<h3>Project Name</h3>
+			<div>Description dfasdfdsfadfadfasdfadsf adsaasdfasdfadsfasadfadfadfasdfasdfasdfadsadsfads</div>
+		</div>
+	</div>
+	<div class="project-container">
+		<div class="img-holder"><img src="{{ ASSET_PATH }}/img/projects/mtravel-logo.png"></div>
+		<div class="project-text">
+			<h3>Project Name</h3>
+			<div>Description dfasdfdsfadfadfasdfadsf adsaasdfasdfadsfasadfadfadfasdfasdfasdfadsadsfads</div>
+		</div>
+	</div>
+</div>
