--- a/about.html
+++ b/about.html
@@ -2,11 +2,7 @@
 layout: page
 title: "About"
 description: "This is what I do."
-header-img: "img/about-bg.jpg"
+header-img: "img/home-bg-2.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>Lazy to say anything here. If you are still interested, refer to my old school <a href="https://docs.google.com/document/d/1-s2dYdFqMkLcPfNyUpdqi-5yJtmuYNsld0cwmOPX530/edit">CV</a> here : )</p>
